--- a/vendas.html
+++ b/vendas.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Páginade vendas</h1>
+    <p>Vendas = R$ 5.000,00</p>
     <a href="index.html">Voltar para página inicial</a>
 </body>
 </html>
